ingress-netflixservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
spec:
  selector:
    app: netflix
  ports:
  - port: 80
    targetPort: 3000
