ingress-netflix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-rule
  labels:
    name: netflix-rule
spec:
  ingressClassName: nginx
  rules:
  - host: netflix.mahender.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: netflix-service
            port: 
              number: 80
