ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-rule
  labels:
    name: nginx-rule
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.mahender.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
